# Cloud-Native-Bench

./: README.md
cloud-native-bench/: .dockerignore  .gitignore  Cargo.toml
cloud-native-bench/benchmark-adapter-types/: Cargo.toml
cloud-native-bench/benchmark-adapter-types/src/: lib.rs
cloud-native-bench/benchmark-analysis-runner/: .dockerignore  .env  Dockerfile  docker-compose.yml  orm.py  requirements.txt  runner.py
cloud-native-bench/benchmark-cpu/: .env  Cargo.toml  Dockerfile
cloud-native-bench/benchmark-cpu/src/: main.rs
cloud-native-bench/benchmark-criterion-result-adapter/: Cargo.toml
cloud-native-bench/benchmark-criterion-result-adapter/src/: lib.rs
cloud-native-bench/benchmark-database-interface/: Cargo.toml
cloud-native-bench/benchmark-database-interface/src/: lib.rs
cloud-native-bench/benchmark-fibonacci-cpu/: .env  Cargo.toml  Dockerfile
cloud-native-bench/benchmark-fibonacci-cpu/benches/: fibonacci-cpu.rs
cloud-native-bench/benchmark-fibonacci-cpu/src/: main.rs
cloud-native-bench/benchmark-grpc/: Cargo.toml
cloud-native-bench/benchmark-grpc/src/: lib.rs
cloud-native-bench/benchmark-operator/: .env  Cargo.toml  Dockerfile
cloud-native-bench/benchmark-operator/src/: benchmark_controller.rs  grpc.rs  lib.rs  main.rs  state.rs  web.rs
cloud-native-bench/benchmark-proto/: Cargo.toml  build.rs
cloud-native-bench/benchmark-proto/proto/: benchmark.proto
cloud-native-bench/benchmark-proto/src/: lib.rs
cloud-native-bench/benchmark-web-backend/: .env  Cargo.toml  Dockerfile
cloud-native-bench/benchmark-web-backend/src/: db.rs  main.rs  routes.rs  types.rs
cloud-native-bench/benchmark-web-backend/templates/: benchmark_details.html  benchmark_list.html
cloud-native-bench/load-generator-wrk/: .env  Cargo.toml  Dockerfile
cloud-native-bench/load-generator-wrk/src/: main.rs
deployment/cloud-native-bench/: Chart.yaml  values.yaml
deployment/cloud-native-bench/templates/: _helpers.tpl  analysis-deployment.yaml  crb.yaml  operator-deployment.yaml  operator-grpc-service.yaml  serviceaccount.yaml  web-deployment.yaml  web-service.yaml
deployment/cloud-native-bench/templates/tests/: test-connection.yaml
