[package]
name = "benchmark-fibonacci-cpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
benchmark-grpc = { path = "../benchmark-grpc" }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
benchmark-criterion-result-adapter = { path = "../benchmark-criterion-result-adapter" }
benchmark-database-interface = { path = "../benchmark-database-interface" }
dotenv = "0.15.0"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "fibonacci-cpu"
harness = false
