[package]
name = "benchmark-operator"
version = "0.1.0"
edition = "2021"
default-run = "benchmark-operator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.82.1", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.18.0", features = ["v1_26", "schemars"] }
futures = "0.3.28"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
schemars = "0.8.12"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter"] }
chrono = { version = "0.4.24", features = ["serde"] }
axum = { version = "0.6.15", features = ["http2"] }
hyper = { version = "0.14.26", features = ["full"] }
tower = "0.4.13"
tonic = "0.9.1"
benchmark-proto = { path = "../benchmark-proto" }
dotenv = "0.15.0"
