[package]
name = "benchmark-web-backend"
version = "0.1.0"
edition = "2021"
authors = ["Michiel Van Kenhove <michiel.vankenhove@ugent.be>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
axum = { version = "0.6.18", features = ["http2", "macros"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
dotenv = "0.15.0"
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "chrono",
] }
chrono = { version = "0.4.24", features = ["serde"] }
askama = { version = "0.12.0", features = ["markdown"] }
